--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,19 @@ nav h1 {
   height: calc(100vh - 170px);
   display: flex;
   align-items: center;
+  padding-top: 10px;
+  flex-direction: column;
+}
+
+.gameOver {
+  width: 100vw;
+  height: calc(100vh - 170px);
+  display: flex;
+  align-items: center;
   padding-top: 50px;
   flex-direction: column;
+  backdrop-filter: blur(5px);
+  filter: blur(5px);
 }
 
 .board {
@@ -65,6 +76,16 @@ nav h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.retry {
+  width: 400px;
+  height: 300px;
+  position: absolute;
+  z-index: 999;
+  /* top: 50%;
+  left: 50%; */
+
+}
+
 #correct {
   background-color: #528d4e;
 }
@@ -80,7 +101,8 @@ nav h1 {
 .keyboard {
   width: 700px;
   height: 300px;
-  margin-top: 60px;
+  margin-top: 10px;
+  padding-top: 0px;
 }
 
 .line1 {
