--- a/src/App.css
+++ b/src/App.css
@@ -77,12 +77,10 @@ nav h1 {
 }
 
 .retry {
-  width: 400px;
-  height: 300px;
   position: absolute;
   z-index: 999;
-  /* top: 50%;
-  left: 50%; */
+  top: 36.5%;
+  left: 47.69%;
 
 }
 
